--- a/CustomMessageBox.csproj
+++ b/CustomMessageBox.csproj
@@ -12,6 +12,7 @@
 
     <ItemGroup>
       <Folder Include="Properties\" />
+      <Folder Include="Screenshots\" />
     </ItemGroup>
 
     <ItemGroup>
